Add stylesheet with stater styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,13 @@
+/* Asterisk wildcard selector to override default styles added by the browser */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 /* Header */
 header {
-    background-color: lightcoral;
+    background-color: #ca1d1d;
 }
 
 /* Main content */
