--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,12 @@ h1 {
 
 /* Header */
 header {
-    background-color: #ca1d1d;
+    background-color: #e4bfbf;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 
 /* Main content */
@@ -35,6 +40,6 @@ main {
 
 /* Footer */
 footer {
-    background-color: orange;
+    background-color: rgb(201, 144, 38);
 
 }
