--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,12 @@ h1 {
     border-bottom: 1px solid #3a3a3a;
 }
 
+/* Navbar styles with dropdown toggle */
+nav {
+    position: absolute;
+
+}
+
 /* Main content */
 main {
     background-color: rgb(189, 122, 199);
