--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,15 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+h1,
+h2,
+h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
 /* Header */
 header {
     background-color: #e4bfbf;
@@ -35,12 +44,7 @@ header a {
     color: inherit;
 }
 
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
-}
+
 
 #menu {
     font-size: 110%;
@@ -95,6 +99,23 @@ main {
     width: 100%;
     background: url("../images/hero-image.jpg") no-repeat center center/cover;
     position: relative;
+}
+
+#cover-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(208, 118, 203, 0.7);
+    font-size: 150%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text>h2,
+#cover-text>h3 {
+    color: #e4bfbf;
 }
 
 #bikers {
@@ -172,6 +193,11 @@ main {
         margin-top: 79px;
     }
 
+    /* Hero image */
+    #cover-text {
+        width: 350px;
+        right: 50px;
+    }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
