--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,8 +97,9 @@ main {
 #hero {
     height: 600px;
     width: 100%;
-    background: url("../images/hero-image.jpg") no-repeat center center/cover;
+    background: url("../images/hero-image.jpeg") no-repeat center center/cover;
     position: relative;
+    background-size: cover;
 }
 
 #cover-text {
