--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,56 @@ main {
     line-height: 0;
 }
 
+/* Form */
+#signup {
+    background-image: url("../images/wins-image.jpg");
+    background-size: cover;
+    background-position: 100%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
 
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+
+
+#signup-form>h2 {
+    color: #e4bfbf;
+    margin-bottom: 20px;
+}
+
+
+.text-input {
+    background: transparent;
+    color: #e4bfbf;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #e4bfbf;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #712b88;
+    color: #fafafa;
+}
 
 /* Footer */
 #social-networks {
