--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,7 @@ main {
 
 /* Hero section */
 #hero {
+
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.jpeg") no-repeat center center/cover;
@@ -220,15 +221,16 @@ main {
     line-height: 0;
 }
 
+
 /* Form */
 #signup {
     background-image: url("../images/wins-image.jpg");
     background-size: cover;
+    height: 100%;
     background-position: 75%;
     padding: 20px 10% 0 10%;
     flex-grow: 1;
 }
-
 
 #signup-form {
     color: #fafafa;
@@ -236,12 +238,10 @@ main {
     padding: 30px;
 }
 
-
 #signup-form>h2 {
     color: #e4bfbf;
     margin-bottom: 20px;
 }
-
 
 .text-input {
     background: transparent;
@@ -254,13 +254,11 @@ main {
     padding: 0 5px;
 }
 
-
 .radio-buttons {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
-
 
 .join-button {
     margin-top: 20px;
@@ -270,6 +268,7 @@ main {
     background-color: #752b90;
     color: #e4bfbf;
 }
+
 
 /* Footer */
 #social-networks {
@@ -329,7 +328,7 @@ main {
     /* Main content */
     main {
         /* Push main content down to accommodate larger header */
-        margin-top: 79px;
+        margin-top: 85px;
     }
 
     /* Hero image */
