--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,12 +221,12 @@ main {
     line-height: 0;
 }
 
-
 /* Form */
 #signup {
     background-image: url("../images/wins-image.jpg");
     background-size: cover;
-    height: 100%;
+    height: 600px;
+    width: 100%;
     background-position: 75%;
     padding: 20px 10% 0 10%;
     flex-grow: 1;
@@ -240,7 +240,8 @@ main {
 
 #signup-form>h2 {
     color: #e4bfbf;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+
 }
 
 .text-input {
@@ -268,7 +269,6 @@ main {
     background-color: #752b90;
     color: #e4bfbf;
 }
-
 
 /* Footer */
 #social-networks {
